fix logged in container grid not respecting overflow

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,6 @@ body{
 	margin: 0px;
 }
 
-html, body {
+html, body, #root {
 	height: 100%;
 }
